- Backdrop : Fixed bug that prevented context variables from being used by the `title` and `description` plugs. All variables from the global script context are now available.
- Box : Fixed bug that allowed locked plugs to be promoted.
- TransformTools : Fixed rare crash triggered by selecting multiple objects.
- Floating Editors : Fixed keyboard shortcuts (#3632).

0.55.5.1 (relative to 0.55.5.0)
========

Fixes
-----

- Set expression context menus :
  - Fixed bug that prevented the plug label context menu opening when the plug accepted set expressions.
  - Fixed bug that prevented the SetFilter's set expression menu from appearing when attached to a CopyAttributes node.
- CollectScenes : Fixed bug which caused errors when `RecursiveRange` encountered a CollectScenes node.
- Range/RecursiveRange : Fixed problems caused by visiting CopyAttributes nodes.

0.55.5.0 (relative to 0.55.4.1)
========

Improvements
------------

- Viewer : Added overscan display when looking through a suitably configured render camera.
- Spreadsheet : Improved performance when constructing large Spreadsheets.

Fixes
-----

- Spreadsheet :
	- Fixed bug which caused incorrect column widths after deleting a column (#3630, #3631).
	- Fixed bug that caused a load failure if a row had been deleted prior to saving.
- Viewer/InteractiveRender : Fixed bug that caused unnecessary attribute updates when changing globals.
- GraphComponent : Fixed Range and RecursiveRange iterators so that they correctly filter classes defined in Python (#3441).
- MenuButton : Fixed bug that caused buttons to remain highlighted after their menu was closed.
- StringPlug : Added compatibility for loading files saved in a future Gaffer 0.57.0.0 release.

API
---

- Spreadsheet : Added Python binding for `RowsPlug.defaultRow()`.
- Serialisation : Added `childIdentifier()` method.

0.55.4.1 (relative to 0.55.4.0)
========

Fixes
-----

- Catalogue :